feat: added images to the webpages

--- a/coast.html
+++ b/coast.html
@@ -21,7 +21,9 @@
     </nav>
 
     <section>
-      <figure></figure>
+      <figure>
+        <img src="assets/images/beach.jpg" alt="an image of coastal Dublin" />
+      </figure>
     </section>
   </body>
 </html>
