--- a/index.html
+++ b/index.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New website</title>
-</head>
-<body>
-    <h1>
-        Learn to create amazing websites!
-    </h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <title>Dublin</title>
+  </head>
+  <body>
+    <h1>Dublin, a coastal city</h1>
     <nav>
-        <div>
-        <a href="lesson.html"> Click here </a> learn to create an amazing website </div>
+      <ul>
+        <li>
+          <a href="index.html"> city </a>
+        </li>
+        <li>
+          <a href="coast.html">coast</a>
+        </li>
+      </ul>
     </nav>
-</body>
+
+    <section>
+      <figure>
+        <img src="assets/images/city.jpg" alt="an image of urban Dublin" />
+      </figure>
+    </section>
+  </body>
 </html>
